--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
-@import url("http://fonts.cdnfonts.com/css/harlow-solid-italic");
+/* @import url("http://fonts.cdnfonts.com/css/harlow-solid-italic"); */
 
 * {
   margin: 0;
@@ -87,7 +87,7 @@ header.sticky ul li a {
   background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
     url(/Bg.jpg);
   background-size: cover;
-  background-position: top;
+  background-position: 50% 20%;
 }
 
 .text-wrap {
@@ -124,7 +124,7 @@ button {
   width: 250px;
   height: max-content;
   background: transparent;
-  left: 27vw;
+  left: 30vw;
   bottom: 16vh;
   padding: 15px;
   cursor: pointer;
@@ -233,7 +233,7 @@ footer {
   border-radius: 50px;
 }
 
-/* responsive */
+/* !!! Responsive !!! */
 
 @media (max-width: 991px) {
   /* corregir cuando hace scroll al menú en responsive */
@@ -243,18 +243,18 @@ footer {
 
   header,
   header.sticky {
-    padding: 20px 40px;
+    padding: 10px;
     z-index: 1000;
   }
 
   header .logo {
     font-size: 25px;
-    margin-left: 30px;
+    margin: 10px;
   }
 
   .menu {
     position: fixed !important;
-    top: 75px;
+    top: 70px;
     left: -100%;
     display: block !important;
     padding: 100px 40px;
@@ -277,8 +277,116 @@ footer {
     margin: 10px;
   }
 
-  header ul li a:hover {
-    color: #f36421;
+  header ul li a:active {
+    color: #ff0000;
+  }
+
+  .toggle {
+    width: 40px;
+    height: 40px;
+    background: url("../assets/images/menu.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 30px;
+    cursor: pointer;
+  }
+
+  .toggle.active {
+    background: url("../assets/images/close.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 25px;
+    cursor: pointer;
+  }
+
+  button {
+    position: absolute;
+    top: 100px;
+    right: 58vh;
+  }
+
+  .wrap {
+    flex-direction: column;
+    padding: 40px;
+    justify-content: center;
+  }
+
+  footer {
+    padding: 20px 40px;
+  }
+
+  .wrap .text-wrap {
+    margin-bottom: 100px;
+    margin-left: 0;
+    max-width: 100%;
+  }
+
+  .wrap .text-wrap h2 {
+    font-size: 2rem;
+  }
+
+  /*.wrap .text-wrap h2 span {
+     font-size: 2em; 
+  }*/
+
+  .wrap .text-wrap p {
+    font-size: 1rem;
+  }
+
+  .copyrightText {
+    text-align: center;
+  }
+
+  footer {
+    flex-direction: column;
+    align-items: flex-end;
+  }
+}
+
+@media (max-width: 991px) {
+  /* corregir cuando hace scroll al menú en responsive */
+  /* header.sticky > .menu.active {
+    transition: 0ms;
+  } */
+
+  header,
+  header.sticky {
+    padding: 10px;
+    z-index: 1000;
+  }
+
+  header .logo {
+    font-size: 25px;
+    margin: 10px;
+  }
+
+  .menu {
+    position: fixed !important;
+    top: 70px;
+    left: -100%;
+    display: block !important;
+    padding: 100px 40px;
+    text-align: center;
+    width: 100%;
+    height: 100vh;
+    background: #000;
+    transition: 500ms;
+    z-index: 999;
+    border-top: 1px solid rgba(255, 255, 255, 0.2);
+  }
+
+  .menu.active {
+    left: 0;
+  }
+
+  header ul li a {
+    color: #f87c00;
+    font-size: 24px;
+    margin: 10px;
+  }
+
+  header ul li a:active {
+    color: #ff0000;
   }
 
   .toggle {
