--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
-/* @import url("http://fonts.cdnfonts.com/css/harlow-solid-italic"); */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
 * {
   margin: 0;
@@ -22,7 +22,7 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 30px 80px;
+  padding: 2% 5%;
   z-index: 1000;
   justify-content: space-between;
   align-items: center;
@@ -40,7 +40,6 @@ header .logo {
   font-family: "Harlow Solid Italic";
   letter-spacing: 3px;
   color: rgb(254, 254, 153);
-  /* text-decoration: none; */
   -webkit-text-stroke: 1px #f87c00;
 }
 
@@ -61,7 +60,7 @@ header ul li {
 header ul li a {
   position: relative;
   display: inline-block;
-  margin: 0 7px;
+  margin: 0 10px;
   text-decoration: none;
   font-size: 20px;
   font-weight: 700;
@@ -69,7 +68,8 @@ header ul li a {
 }
 
 header ul li a:hover {
-  border-bottom: 1px solid #f87c00;
+  border-bottom: 0.5px solid #f87c00;
+  transition: 5s;
 }
 
 header.sticky ul li a {
@@ -84,7 +84,7 @@ header.sticky ul li a {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0)),
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)),
     url(/Bg.jpg);
   background-size: cover;
   background-position: 50% 20%;
@@ -94,11 +94,11 @@ header.sticky ul li a {
   position: absolute;
   color: #fff;
   text-align: left;
-  left: 80px;
+  left: 9vh;
   display: flex;
   flex-direction: column;
-  top: 65vh;
-  /* font-family: Georgia, 'Times New Roman', Times, serif; */
+  -webkit-text-stroke: 1px #f87c00;
+  top: 62vh;
 }
 
 .text-wrap h2 {
@@ -184,17 +184,13 @@ button:hover span:nth-child(1) {
   opacity: 0.2;
 }
 
-/* button:nth-child(1):hover span {
-  background: #004800;
-} */
-
 /* !!! Footer !!! */
 
 footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  padding: 20px 100px;
+  padding: 2% 5%;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -227,119 +223,36 @@ footer {
   opacity: 0.7;
   font-weight: 500;
   color: #000;
-  letter-spacing: 1px;
+  letter-spacing: 2px;
   background: #fff;
-  padding: 10px 20px;
+  padding: 1% 40%;
+  padding-right: 2%;
   border-radius: 50px;
 }
 
 /* !!! Responsive !!! */
 
-@media (max-width: 991px) {
-  /* corregir cuando hace scroll al menú en responsive */
-  /* header.sticky > .menu.active {
-    transition: 0ms;
-  } */
-
-  header,
-  header.sticky {
-    padding: 10px;
-    z-index: 1000;
-  }
-
-  header .logo {
-    font-size: 25px;
-    margin: 10px;
-  }
-
-  .menu {
-    position: fixed !important;
-    top: 70px;
-    left: -100%;
-    display: block !important;
-    padding: 100px 40px;
-    text-align: center;
-    width: 100%;
-    height: 100vh;
-    background: #000;
-    transition: 500ms;
-    z-index: 999;
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
-  }
-
-  .menu.active {
-    left: 0;
-  }
-
-  header ul li a {
-    color: #f87c00;
-    font-size: 24px;
-    margin: 10px;
-  }
-
-  header ul li a:active {
-    color: #ff0000;
-  }
-
-  .toggle {
-    width: 40px;
-    height: 40px;
-    background: url("../assets/images/menu.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 30px;
-    cursor: pointer;
-  }
-
-  .toggle.active {
-    background: url("../assets/images/close.png");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: 25px;
-    cursor: pointer;
+@media (max-width: 1300px) {
+  header {
+    padding: 1% 5%;
   }
 
   button {
-    position: absolute;
-    top: 100px;
-    right: 58vh;
+    left: 32vw;
   }
 
   .wrap {
-    flex-direction: column;
-    padding: 40px;
-    justify-content: center;
-  }
-
-  footer {
-    padding: 20px 40px;
+    background-position-y: 35%;
   }
 
   .wrap .text-wrap {
-    margin-bottom: 100px;
-    margin-left: 0;
-    max-width: 100%;
-  }
-
-  .wrap .text-wrap h2 {
-    font-size: 2rem;
-  }
-
-  /*.wrap .text-wrap h2 span {
-     font-size: 2em; 
-  }*/
-
-  .wrap .text-wrap p {
-    font-size: 1rem;
+    top: 55vh;
+    left: 10vh;
   }
 
   .copyrightText {
-    text-align: center;
-  }
-
-  footer {
-    flex-direction: column;
-    align-items: flex-end;
+    padding: 1.3% 35%;
+    padding-right: 2%;
   }
 }
 
