--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
 
 * {
   margin: 0;
@@ -22,11 +22,11 @@ header {
   top: 0;
   left: 0;
   width: 100%;
-  padding: 2% 5%;
+  padding: 1% 5%;
   z-index: 1000;
   justify-content: space-between;
   align-items: center;
-  transition: 2.5s;
+  transition: 1.5s;
 }
 
 header.sticky {
@@ -35,29 +35,28 @@ header.sticky {
   box-shadow: 0 5px 20px rgba(255, 255, 255, 0.5);
 }
 
-header .logo {
+header > .logo {
   font-size: 40px;
   font-family: "Harlow Solid Italic";
-  letter-spacing: 3px;
   color: rgb(254, 254, 153);
   -webkit-text-stroke: 1px #f87c00;
 }
 
-header.sticky .logo {
+header.sticky > .logo {
   color: #fff;
 }
 
-header ul {
+header > ul {
   position: relative;
   display: flex;
 }
 
-header ul li {
+header > ul > li {
   position: relative;
   list-style: none;
 }
 
-header ul li a {
+header > ul > li > a {
   position: relative;
   display: inline-block;
   margin: 0 10px;
@@ -65,14 +64,15 @@ header ul li a {
   font-size: 20px;
   font-weight: 700;
   color: #f87c00;
+  font-family: "Passion One";
 }
 
-header ul li a:hover {
-  border-bottom: 0.5px solid #f87c00;
+header > ul > li > a:hover {
+  border-bottom: 0.1px solid #f87c00;
   transition: 5s;
 }
 
-header.sticky ul li a {
+header.sticky > ul > li > a {
   color: #fc9228;
 }
 
@@ -90,30 +90,34 @@ header.sticky ul li a {
   background-position: 50% 20%;
 }
 
-.text-wrap {
+.wrap > .text-wrap {
   position: absolute;
   color: #fff;
   text-align: left;
-  left: 9vh;
   display: flex;
   flex-direction: column;
   -webkit-text-stroke: 1px #f87c00;
-  top: 62vh;
+  bottom: 15%;
+  left: 5%;
 }
 
-.text-wrap h2 {
+.text-wrap > h2 {
+  font-family: "aclonica";
   font-weight: 500;
   font-size: 3rem;
-  letter-spacing: 2px;
+  letter-spacing: 5px;
   line-height: 1em;
 }
 
-.text-wrap h2 span {
-  font-weight: 700;
+.text-wrap > h2 > span {
+  font-weight: 900;
+  font-size: 150%;
+  font-family: "kavoon";
 }
 
-.text-wrap P {
+.text-wrap > P {
   font-size: 1.5rem;
+  font-family: "aclonica";
 }
 
 /* !!! Button !!! */
@@ -121,17 +125,17 @@ header.sticky ul li a {
 button {
   transform-style: preserve-3d;
   position: relative;
-  width: 250px;
-  height: max-content;
+  min-width: 20%;
+  min-height: 5%;
   background: transparent;
-  left: 30vw;
-  bottom: 16vh;
-  padding: 15px;
+  right: -35%;
+  top: -20%;
+  padding: 1%;
   cursor: pointer;
   border: none;
 }
 
-button span {
+button > span {
   border: 0.5px solid #e9a810;
   position: absolute;
   top: 0;
@@ -146,39 +150,40 @@ button span {
   color: #fff;
   font-size: 1.5em;
   transition: 1.1s ease-out;
+  font-family: "Peralta";
 }
 
-button:hover span {
+button:hover > span {
   z-index: 1000;
   transition: 300ms;
   color: #fff;
   background: #915c32;
 }
 
-button:hover span:nth-child(5) {
+button:hover > span:nth-child(5) {
   transform: translate(-40px, 40px);
   opacity: 1;
 }
 
-button:hover span:nth-child(4) {
+button:hover > span:nth-child(4) {
   transform: translate(-30px, 30px);
   background: #e9a810;
   opacity: 0.8;
 }
 
-button:hover span:nth-child(3) {
+button:hover > span:nth-child(3) {
   transform: translate(-20px, 20px);
   background: #ab260c;
   opacity: 0.6;
 }
 
-button:hover span:nth-child(2) {
+button:hover > span:nth-child(2) {
   transform: translate(-10px, 10px);
   background: #4f200c;
   opacity: 0.4;
 }
 
-button:hover span:nth-child(1) {
+button:hover > span:nth-child(1) {
   transform: translate(0px, 0px);
   background: #004800;
   opacity: 0.2;
@@ -207,11 +212,11 @@ footer {
   padding: 0 10px;
 }
 
-.sci li {
+.sci > li {
   list-style: none;
 }
 
-.sci li a {
+.sci > li > a {
   position: relative;
   margin: 10px;
   text-align: center;
@@ -221,67 +226,82 @@ footer {
 
 .copyrightText {
   opacity: 0.7;
-  font-weight: 500;
+  font-size: 12px;
   color: #000;
   letter-spacing: 2px;
   background: #fff;
-  padding: 1% 40%;
+  padding: 1.5% 10%;
   padding-right: 2%;
   border-radius: 50px;
+  font-family: "Press Start 2P";
 }
 
 /* !!! Responsive !!! */
 
 @media (max-width: 1300px) {
-  header {
-    padding: 1% 5%;
-  }
-
-  button {
-    left: 32vw;
-  }
-
   .wrap {
     background-position-y: 35%;
   }
+}
 
-  .wrap .text-wrap {
-    top: 55vh;
-    left: 10vh;
-  }
-
+@media (max-width: 1170px) {
   .copyrightText {
-    padding: 1.3% 35%;
-    padding-right: 2%;
+    padding: 1.5%;
+    text-align: center;
   }
 }
 
-@media (max-width: 661px) {
-  /* corregir cuando hace scroll al menú en responsive */
-  /* header.sticky > .menu.active {
-    transition: 0ms;
-  } */
+@media (max-width: 1024px) {
+  header .logo {
+    font-size: 35px;
+    letter-spacing: 2px;
+  }
 
+  button {
+    font-size: 10px;
+  }
+
+  .sci > li > a {
+    margin: 8px;
+    transform: scale(0.7);
+  }
+
+  .copyrightText {
+    padding: 1.3%;
+  }
+}
+
+@media (max-width: 840px) {
+  header .logo {
+    font-size: 30px;
+  }
+
+  .copyrightText {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 770px) {
   header,
   header.sticky {
-    padding: 10px;
+    padding: 2%;
     z-index: 1000;
   }
 
-  header .logo {
+  header > .logo {
     font-size: 25px;
-    margin: 10px;
+    margin: 1%;
   }
 
   .menu {
     position: fixed !important;
-    top: 70px;
+    top: 10.5%;
     left: -100%;
     display: block !important;
-    padding: 100px 40px;
+    padding: 20%;
     text-align: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     background: #000;
     transition: 500ms;
     z-index: 999;
@@ -292,74 +312,105 @@ footer {
     left: 0;
   }
 
-  header ul li a {
+  header > ul > li > a {
     color: #f87c00;
-    font-size: 24px;
-    margin: 10px;
-  }
-
-  header ul li a:active {
-    color: #ff0000;
+    font-size: 25px;
+    margin: 5% !important;
+    text-transform: uppercase;
   }
 
   .toggle {
-    width: 40px;
+    width: 10%;
     height: 40px;
     background: url("../assets/images/menu.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 30px;
+    background-size: 50%;
     cursor: pointer;
+    transition: 500ms;
   }
 
   .toggle.active {
     background: url("../assets/images/close.png");
     background-position: center;
     background-repeat: no-repeat;
-    background-size: 25px;
+    background-size: 30%;
     cursor: pointer;
   }
 
   button {
-    position: absolute;
-    top: 100px;
-    right: 58vh;
+    top: -35%;
+    right: -2% !important;
+    width: 60%;
   }
 
   .wrap {
     flex-direction: column;
-    padding: 40px;
     justify-content: center;
   }
 
-  footer {
-    padding: 20px 40px;
+  .wrap > .text-wrap {
+    left: 0;
+    margin: 8%;
+    padding: 8%;
+    text-align: center;
   }
 
-  .wrap .text-wrap {
-    margin-bottom: 100px;
-    margin-left: 0;
-    max-width: 100%;
+  .wrap > .text-wrap > h2 {
+    font-size: 3rem;
   }
 
-  .wrap .text-wrap h2 {
-    font-size: 2rem;
-  }
-
-  /*.wrap .text-wrap h2 span {
-     font-size: 2em; 
-  }*/
-
-  .wrap .text-wrap p {
-    font-size: 1rem;
+  .wrap > .text-wrap > p {
+    font-size: 1.5rem;
   }
 
   .copyrightText {
     text-align: center;
   }
+}
+
+@media (max-width: 425px) {
+  .menu {
+    top: 8.5%;
+  }
+
+  header > ul > li > a {
+    margin: 15% !important;
+  }
+
+  .toggle {
+    background-size: 80%;
+  }
+
+  .toggle.active {
+    background-size: 60%;
+  }
+
+  button {
+    top: -38%;
+  }
+
+  .wrap > .text-wrap {
+    margin: 20% 8%;
+    padding: 20% 8%;
+  }
+
+  .wrap > .text-wrap > h2 {
+    font-size: 2rem;
+  }
+
+  .wrap > .text-wrap > p {
+    font-size: 1rem;
+  }
 
   footer {
+    padding: 20px 40px;
     flex-direction: column;
     align-items: flex-end;
+  }
+
+  .copyrightText {
+    font-size: 8px;
+    padding: 5%;
   }
 }
