--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800,900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
+@import url("./assets/fonts/aclonica.css");
 
 * {
   margin: 0;
@@ -85,7 +86,7 @@ header.sticky > ul > li > a {
   align-items: center;
   justify-content: center;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)),
-    url(/Bg.jpg);
+    url(/assets/images/Bg.jpg);
   background-size: cover;
   background-position: 50% 20%;
 }
