--- a/Menu/menu.css
+++ b/Menu/menu.css
@@ -10,7 +10,7 @@
 body {
   background-color: #333;
   transition: 1s;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 header {
@@ -75,22 +75,22 @@ header.sticky > ul > li > a {
 }
 
 .wrap {
-  padding: 100px 0;
-  position: absolute;
+  padding: 10% 0;
+  bottom: 0;
+  min-height: 100vh;
+  /* position: absolute;
   width: 100vw;
-  height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   background: url(/assets/images/burguerWhitCheese.jpg);
   background-size: 100% 100%;
-  background-repeat: no-repeat;
 }
 
 .price-table {
   text-align: center;
   overflow: hidden;
-  margin: 20px;
+  margin: 5.558%;
   background: #fff;
   box-sizing: border-box;
   box-shadow: inset 0 0 40px rgba(0, 0, 0, 0.2), 0 20px 50px rgba(0, 0, 0, 0.5);
@@ -102,10 +102,25 @@ header.sticky > ul > li > a {
 }
 
 .price-table .price-head {
-  padding: 50px;
-  background: linear-gradient(45deg, #493939, #db0000);
-  border-bottom-left-radius: 50%;
-  border-bottom-right-radius: 50%;
+  padding: 15%;
+  padding-bottom: 40%;
+  border-bottom-left-radius: 30%;
+  border-bottom-right-radius: 30%;
+  background-position: 50% 30%;
+  background-size: cover;
+  -webkit-text-stroke: 0.5px #db0000;
+}
+
+.col-sm-4:nth-child(1) .price-head {
+  background-image: url("/assets/images/comboBurguerPapas.jpg");
+}
+
+.col-sm-4:nth-child(2) .price-head {
+  background-image: url("/assets/images/superBurguer.jpg");
+}
+
+.col-sm-4:nth-child(3) .price-head {
+  background-image: url("/assets/images/comboHotDogs.jpg");
 }
 
 .price-table .price-head h4 {
@@ -118,8 +133,8 @@ header.sticky > ul > li > a {
 
 .price-table .price-head h2 {
   margin: 0;
-  padding: 20px 0 0;
-  font-size: 36px;
+  padding: 5% 0 0;
+  font-size: 250%;
   color: #fff;
 }
 
@@ -130,16 +145,15 @@ header.sticky > ul > li > a {
 .price-content ul {
   position: relative;
   margin: 0;
-  padding: 20px 0;
+  padding: 0;
 }
 
 .price-content ul li {
-  min-height: max-content;
   list-style: none;
-  font-size: 16px;
+  font-size: 110%;
   text-transform: uppercase;
-  padding: 10px 25px;
-  color: #777;
+  padding: 1% 10%;
+  color: #555;
   cursor: pointer;
   transition: 800ms;
   border-left: 10px solid transparent;
@@ -156,6 +170,11 @@ header.sticky > ul > li > a {
   padding: 30px;
 }
 
+.price-button a:active {
+  box-shadow: inset 5em 5em 5em 5em rgba(0, 0, 0, 0.2);
+  /* 5px 5px 5px 5px rgba(0, 0, 0, 0.2); */
+}
+
 .price-button a {
   padding: 10px 40px;
   background: #000;
@@ -164,5 +183,5 @@ header.sticky > ul > li > a {
   font-size: 18px;
   text-transform: uppercase;
   text-decoration: none !important;
-  background: linear-gradient(45deg, #493939, #db0000);
+  background: linear-gradient(45deg, #b85402, #db0000);
 }
