--- a/Menu/menu.css
+++ b/Menu/menu.css
@@ -78,13 +78,26 @@ header.sticky > ul > li > a {
   padding: 10% 0;
   bottom: 0;
   min-height: 100vh;
-  /* position: absolute;
-  width: 100vw;
   display: flex;
+  /* max-width: 100vw;
+   position: absolute;*/
   align-items: center;
-  justify-content: center; */
+  justify-content: center;
   background: url(/assets/images/burguerWhitCheese.jpg);
   background-size: 100% 100%;
+}
+
+.swiper-container {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px !important;
+  min-width: 300px;
 }
 
 .price-table {
@@ -97,7 +110,7 @@ header.sticky > ul > li > a {
   border-radius: 20px;
 }
 
-.col-sm-4:nth-child(2) .price-table {
+.scale {
   transform: scale(1.1);
 }
 
