--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ header.sticky > ul > li > a {
   align-items: center;
   justify-content: center;
   background: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)),
-    url(/assets/images/Bg.jpg);
+    url(/assets/images/backgrounds/Bg.jpg);
   background-size: cover;
   background-position: 50% 20%;
 }
@@ -323,7 +323,7 @@ footer {
   .toggle {
     width: 10%;
     height: 40px;
-    background: url("../assets/images/menu.png");
+    background: url("../assets/images/icons/menu.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 50%;
@@ -332,7 +332,7 @@ footer {
   }
 
   .toggle.active {
-    background: url("../assets/images/close.png");
+    background: url("../assets/images/icons/close.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: 30%;
