--- a/style.css
+++ b/style.css
@@ -52,6 +52,29 @@ header > ul {
   display: flex;
 }
 
+.tiendas {
+  position: absolute;
+  display: none;
+  display: flex;
+  background: #fff;
+  top: 200%;
+  right: 0;
+  min-width: 200%;
+  list-style: none;
+  border-bottom-left-radius: 10%;
+  border-bottom-right-radius: 10%;
+  flex-direction: column;
+  transition: 500ms;
+}
+
+.tiendas > li {
+  width: 100%;
+  height: 150%;
+  text-align: center;
+  border: 0.5px solid black;
+  cursor: pointer;
+}
+
 header > ul > li {
   position: relative;
   list-style: none;
