--- a/Tiendas/tiendas.css
+++ b/Tiendas/tiendas.css
@@ -28,6 +28,47 @@ body {
   background: linear-gradient(to left, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
 }
 
+.container>.slicerContainerMap {
+  position: relative;
+  bottom: -100%;
+  width: 100%;
+  height: 80vh;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
+  flex-direction: column;
+}
+
+.container>.slicerContainerMap::before {
+  content: "";
+  border: 1px solid #ccc;
+  position: absolute;
+  width: 90%;
+  height: 100%;
+  top: 1%;
+  border-top-right-radius: 30px;
+  border-top-left-radius: 30px;
+  margin: 1%;
+}
+
+.container>.slicerContainerMap::after {
+  content: "_________";
+  border: 2px solid #ccc;
+  position: absolute;
+  width: 25%;
+  height: 2%;
+  top: 3%;
+  border-radius: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  background: linear-gradient(to top, #000, transparent);
+  margin: 1%;
+}
+
 div.title {
   position: absolute;
   width: 80%;
@@ -35,20 +76,20 @@ div.title {
   padding: 1%;
 }
 
-div > div.title {
+div>div.title {
   top: -4%;
+  transform: rotate(-5deg);
 }
 
-.container > .title > h2 {
+.container>.title>h2 {
   color: #fff;
   font-size: 200%;
   font-weight: revert;
   text-shadow: 50px 30px 3px #ddd;
-  transform: rotate(-5deg);
   transition: 500ms;
 }
 
-.container > .containerMap {
+.container>.containerMap {
   position: absolute;
   margin-bottom: 1%;
   height: 90%;
@@ -57,7 +98,7 @@ div > div.title {
   width: 40%;
 }
 
-.container > .containerMap > iframe {
+.container>.containerMap>iframe {
   border-radius: 5%;
   border: solid rgba(100, 100, 100, 1) 1px !important;
   box-shadow: 5px 5px 1px rgba(255 255 255 / 80%);
@@ -65,52 +106,55 @@ div > div.title {
   width: 100%;
 }
 
-.container > .reservas {
+.container>.reservas {
   position: absolute;
   bottom: 10%;
   left: 35%;
   margin: 1%;
   padding: 0;
   transition: 500ms;
-  width: 15%;
-  z-index: 1000;
+  width: max-content;
+  z-index: 5;
 }
 
-.container > .reservas > button {
+.container>.reservas>button {
   padding: 3% 10%;
   border-radius: 20px;
   box-shadow: inset -5px -5px 5px rgb(0 0 0 / 20%),
     5px 5px 0 rgba(255, 255, 255, 1);
   cursor: pointer;
-  width: 100%;
+  width: max-content;
   font-size: 150%;
   transition: 300ms;
+  white-space: pre-line;
 }
-.container > .reservas > button:active {
+
+.container>.reservas>button:active {
   box-shadow: 5px 4px 0 rgba(255, 255, 255, 1);
   transform: translate(3px, 3px);
   transition: 300ms;
 }
 
-.container > .containerTiendas {
+.container>.containerTiendas {
   position: absolute;
   left: 4%;
   top: 20%;
-  height: 100%;
+  height: max-content;
   width: 45%;
 }
 
-.container > .containerTiendas > .tiendas {
+.container>.containerTiendas>.tiendas {
   position: absolute;
-  display: flex;
+  display: grid;
   width: 100%;
   list-style: none;
   flex-direction: column;
   transition: 500ms;
   height: 100%;
+  z-index: 1;
 }
 
-.container > .containerTiendas > .tiendas > li {
+.container>.containerTiendas>.tiendas>li {
   background: rgba(255, 255, 255, 0.2);
   width: 100%;
   max-height: 200%;
@@ -121,16 +165,17 @@ div > div.title {
   color: whitesmoke;
   transition: 500ms;
   margin: 1%;
-  z-index: 0;
+  z-index: 1;
 }
 
-.container > .containerTiendas > .tiendas > li:hover {
+.container>.containerTiendas>.tiendas>li:hover {
   box-shadow: 5px 4px 0 rgba(255, 255, 255, 1);
-  background: rgba(0, 0, 0, 0.6);
+  background: rgba(0, 0, 0, 0.5);
   transform: scale(1.1);
+  z-index: 2;
 }
 
-.containerTiendas > .tiendas > li > .title {
+.containerTiendas>.tiendas>li>.title {
   background: rgba(255, 255, 255, 1);
   border: 0.5px solid rgba(255, 255, 255, 1);
   border-radius: 5px;
@@ -138,14 +183,15 @@ div > div.title {
   text-transform: uppercase;
 }
 
-.containerTiendas > .tiendas > li:hover > .title {
+.containerTiendas>.tiendas>li:hover>.title {
   font-weight: bold !important;
+  background: rgba(117, 38, 38, 0) !important;
+  color: #fff;
 }
 
-.containerTiendas > .tiendas > li > .containerPosition {
+.containerTiendas>.tiendas>li>.containerPosition {
   position: relative;
   display: flex;
-  gap: 20%;
   bottom: -20%;
   margin: 2% 3%;
   background: rgba(255, 255, 255, 0.2);
@@ -156,63 +202,112 @@ div > div.title {
   align-items: center;
 }
 
-.containerTiendas > .tiendas > li:hover > .containerPosition {
+.containerTiendas>.tiendas>li:hover>.containerPosition {
   background: rgba(255, 255, 255, 0.5);
+  color: #fff;
 }
 
-.containerTiendas > .tiendas > li > .containerPosition > p {
+.containerTiendas>.tiendas>li>.containerPosition>p {
   white-space: pre-line;
   height: 100%;
 }
-.containerTiendas > .tiendas > li > .containerPosition > p,
-.tiendas > li > .containerPosition > label,
-.tiendas > li > .containerPosition > p > label {
-  margin: 0;
+
+.containerTiendas>.tiendas>li>.containerPosition>p,
+.tiendas>li>.containerPosition>label,
+.tiendas>li>.containerPosition>p>label {
+  margin: auto;
 }
 
-.tiendas > li > .containerPosition > label > p.rating {
+.tiendas>li>.containerPosition>label>p.rating {
   white-space: nowrap;
   margin: 0 !important;
 }
 
-@media (max-width: 1281px) {
-  .containerTiendas > .tiendas > li > .containerPosition {
-    gap: 15%;
+@media (max-width: 1200px) {
+  .container>.containerTiendas {
+    width: 50%;
   }
 }
-@media (max-width: 1100px) {
-  .containerTiendas > .tiendas > li > .containerPosition {
-    gap: 10%;
-    margin: 3%;
-  }
-}
+
 @media (max-width: 1024px) {
-  .container > .title > h2 {
+  .container>.title>h2 {
     font-size: 150%;
   }
-  .container > .reservas > button {
-    padding: 5%;
-  }
-  .container > .containerTiendas {
-    width: 55%;
+
+  .container>.reservas {
+    width: max-content;
   }
 }
-@media (max-width: 860px) {
-  /* .container > .title > h2 {
-    font-size: 150%;
+
+@media (max-width: 990px) {
+  div>div.title {
+    width: 90%;
+    top: 0;
+    left: 0;
   }
-  .container > .reservas > button {
-    padding: 5%;
+
+  .container>.containerTiendas {
+    height: 50%;
+    width: 90%;
+    right: 6%;
+    top: 20%;
+    left: auto;
   }
-  .container > .containerTiendas {
-    width: 55%;
-  } */
-  .container > .containerMap {
+
+  .container>.containerTiendas>.tiendas {
     margin: 0;
-    height: 40%;
-    width: 99%;
-    bottom: 11%;
-    top: auto;
-    right: 6px;
+  }
+
+
+  .containerTiendas>.tiendas>li>.title {
+    margin-left: 10%;
+    margin-right: 10%;
+    text-align: center;
+    width: -moz-available;
+    width: -webkit-fill-available;
+  }
+
+
+  .containerTiendas>.tiendas>li>.containerPosition {
+    transition: 500ms;
+  }
+
+  .container>.slicerContainerMap.active {
+    bottom: 0;
+    z-index: 10;
+  }
+
+  .container>.slicerContainerMap.active>.containerMap {
+    margin: 0;
+    height: 80%;
+    width: 80%;
+  }
+
+  .container>.slicerContainerMap.active>.containerMap>iframe {
+    margin: 0;
+    height: 100%;
+    width: 100%;
   }
 }
+
+/* 
+  .containerTiendas>.tiendas>li:hover>.containerPosition {
+    background: rgba(255, 255, 255, 0.5);
+    height: 100%;
+    transition: 500ms;
+  }
+
+  .containerTiendas>.tiendas>li>.containerPosition>p,
+  .tiendas>li>.containerPosition>label,
+  .tiendas>li>.containerPosition>p>label {
+    transition: 500ms;
+    color: transparent;
+  }
+
+  .containerTiendas>.tiendas>li:hover>.containerPosition>p,
+  .tiendas>li:hover>.containerPosition>label,
+  .tiendas>li:hover>.containerPosition>p>label {
+    color: #000;
+  } */
+
+/* !!! Cambiar con el click */
